--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
     </build>
 
     <modules>
+        <module>test_module</module>
         <module>sandbox-agent</module>
         <module>sandbox-core</module>
         <module>sandbox-api</module>
