--- a/test_module/pom.xml
+++ b/test_module/pom.xml
@@ -9,6 +9,14 @@
         <version>1.3.3</version>
         <relativePath>../sandbox-module-starter/pom.xml</relativePath>
     </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <testng-version>6.8.8</testng-version>
+        <spring.version>4.3.7.RELEASE</spring.version>
+        <jsf.version>1.6.5</jsf.version>
+    </properties>
     <artifactId>test_module</artifactId>
     <name>test_module ${sandbox.version}</name>
     <dependencies>
@@ -24,9 +32,14 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.10.1-SNAPSHOT</version>
+            <version>3.11</version>
             <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -47,6 +60,25 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+
+        <!--Spring-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>test_module-${project.version}</finalName>
